Add support for 1.20.4
I think I might be traumatized